envoystatic/envoy.yaml
# admin:
#   access_log_path: /tmp/admin_access.log
#   address:
#     socket_address:
#       protocol: TCP
#       address: 0.0.0.0
#       port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config: 
          '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
                json_format:
                  downstream: "%DOWNSTREAM_REMOTE_ADDRESS%"
                  downstream_direct: "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS%"
                  authority: "%REQ(:AUTHORITY)%" 
                  upsteam_host: "%UPSTREAM_HOST%"
                  x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: device_interaction_grpc_service
              domains: ["*"]
              routes:
              - match: { prefix: "/main.DeviceInteractionService" }
                route: { cluster: device_interaction_grpc_service }
          http_filters:
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: device_interaction_grpc_service
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    http2_protocol_options: { }
    load_assignment:
      cluster_name: device_interaction_grpc_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: go-grpc-headless-service-server.demo-headless.svc.cluster.local
                port_value: 8080
